@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.2 2009/05/18 06:54:45 sno Exp $
-
-SHA1 (IO-1.25.tar.gz) = 3eb700e772f5485514b0402f7ace49d41e7cc071
-RMD160 (IO-1.25.tar.gz) = 29b0d8eaafe87dfeb021862dfe97df58ebb833bb
-Size (IO-1.25.tar.gz) = 52710 bytes
